tests/rosetta/transpiler/Pascal/approximate-equality.error
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/rosetta/transpiler/Pascal/approximate-equality.pas
approximate-equality.pas(95,23) Error: Illegal qualifier
approximate-equality.pas(96,23) Error: Illegal qualifier
approximate-equality.pas(97,13) Error: Generics without specialization cannot be used as a type for a variable
approximate-equality.pas(94,7) Error: Incompatible types: got "{Dynamic} Array Of Real" expected "LongInt"
approximate-equality.pas(115) Fatal: There were 4 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
